force-app/main/default/objects/XactlyExpress__XCOAuthService__c/XactlyExpress__XCOAuthService__c.object-meta.xml
<CustomObject>
    <label>XCOAuthService</label>
    <nameField>
        <label>XCOAuthService</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCOAuthServices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>