force-app/main/default/objects/XactlyExpress__XCOAuthService__c/fields/XactlyExpress__access_token_url__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__access_token_url__c</fullName>
    <label>access_token_url</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>