force-app/main/default/objects/XactlyExpress__XCOAuthService__c/fields/XactlyExpress__authorization_url__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__authorization_url__c</fullName>
    <label>authorization_url</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>