force-app/main/default/objects/XactlyExpress__XCOAuthService__c/fields/XactlyExpress__consumer_key__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__consumer_key__c</fullName>
    <label>consumer_key</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>