force-app/main/default/objects/XactlyExpress__XCOAuthService__c/fields/XactlyExpress__consumer_secret__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__consumer_secret__c</fullName>
    <label>consumer_secret</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>